# zcyber-xhs

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rerender_all.py  run_gui.bat
.github/workflows/: ci.yml
config/: config.yaml
config/profiles/: cybersec.yaml  pets_example.yaml
config/prompts/: _safety_rules.j2  before_after.j2  career_entry.j2  career_myth.j2  cert_war.j2  ctf.j2  day_in_life.j2  everyday_panic.j2  exam_reality.j2  hacker_pov.j2  interview_intel.j2  mythbust.j2  news_hook.j2  problem_command.j2  rank_war.j2  real_story.j2  salary_map.j2  tool_spotlight.j2
config/prompts/en/: ctf_en.j2  everyday_panic_en.j2  hacker_pov_en.j2  mythbust_en.j2  news_hook_en.j2  problem_command_en.j2  rank_war_en.j2  real_story_en.j2
config/topic_banks/: before_after.yaml  career_entry.yaml  career_myth.yaml  cert_war.yaml  day_in_life.yaml  everyday_panic.yaml  exam_reality.yaml  hacker_pov.yaml  interview_intel.yaml  mythbust.yaml  problem_command.yaml  rank_war.yaml  real_story.yaml  salary_map.yaml  tool_spotlight.yaml
docs/product/: PRODUCT_REDEFINITION_v2.md
scripts/: bootstrap_mcp.sh
src/zcyber_xhs/: __init__.py  analytics.py  cli.py  config.py  db.py  gui.py  models.py  orchestrator.py  publish.py  queue.py  review_bot.py  safety.py  scheduler.py  web.py
src/zcyber_xhs/discover/: dynamic_topic.py  rss.py  topic_bank.py
src/zcyber_xhs/generate/: generator.py  llm.py
src/zcyber_xhs/images/: renderer.py
src/zcyber_xhs/images/templates/: alert_red.html  carousel_slide.html  mythbust_card.html  panic_scenario.html  puzzle_frame.html  rank_war_card.html  split_compare.html  story_card.html  terminal_dark.html  tool_spotlight.html
src/zcyber_xhs/web_templates/: approved.html  base.html  dashboard.html  export.html  generate.html  review.html
src/zcyber_xhs/web_templates/fragments/: gen_results.html  post_modal.html
tests/: test_analytics.py  test_db.py  test_generate.py  test_safety.py
